--- a/activity-scheduler-plugin/popup.html
+++ b/activity-scheduler-plugin/popup.html
@@ -1,127 +1,30 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Activity Scheduler</title>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/pyodide/v0.24.1/full/pyodide.js"></script>
-    <style>
-        body {
-            width: 400px;
-            padding: 20px;
-            font-family: 'Roboto', sans-serif;
-            background-color: #f5f5f5;
-        }
-
-        .container {
-            background-color: white;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-        }
-
-        h1 {
-            color: #1a73e8;
-            font-size: 20px;
-            margin-bottom: 15px;
-            text-align: center;
-        }
-
-        .description {
-            color: #5f6368;
-            font-size: 14px;
-            line-height: 1.5;
-            margin-bottom: 20px;
-        }
-
-        .input-area {
-            margin-bottom: 15px;
-        }
-
-        textarea {
-            width: 100%;
-            height: 100px;
-            padding: 10px;
-            border: 1px solid #dadce0;
-            border-radius: 4px;
-            resize: none;
-            font-family: inherit;
-            margin-bottom: 10px;
-        }
-
-        button {
-            background-color: #1a73e8;
-            color: white;
-            border: none;
-            padding: 10px 20px;
-            border-radius: 4px;
-            cursor: pointer;
-            font-weight: 500;
-            width: 100%;
-            transition: background-color 0.2s;
-        }
-
-        button:hover {
-            background-color: #1557b0;
-        }
-
-        button:disabled {
-            background-color: #ccc;
-            cursor: not-allowed;
-        }
-
-        .task-area {
-            margin-top: 20px;
-            display: none;
-        }
-
-        .task-button {
-            margin-bottom: 10px;
-        }
-
-        .result-box {
-            background-color: #f8f9fa;
-            padding: 10px;
-            border-radius: 4px;
-            margin-top: 10px;
-            border: 1px solid #dadce0;
-            min-height: 40px;
-        }
-
-        #loading {
-            display: none;
-            text-align: center;
-            margin: 10px 0;
-            color: #5f6368;
-        }
-    </style>
+    <title>Activity Planner</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
+    <script src="socket.io.min.js"></script>
 </head>
 <body>
     <div class="container">
-        <h1>Action Decomposer and Planner</h1>
-        <div class="description">
-            This plugin is capable of performing the following actions:
-            <ul>
-                <li>Send a calendar invite to any mail ID on a given task</li>
-                <li>Send a task reminder to any given mail ID</li>
-                <li>Send a mail with any given text to a mail ID</li>
-                <li>Get the stock price of a given stock</li>
-            </ul>
-            Enter your prompt below accordingly:
-        </div>
+        <h1>Activity Planner</h1>
+        <p class="description">
+            This is your AI-powered activity planner - capable of writing and sending mail, 
+            scheduling calendar invites, and getting stock market prices for a given stock. Just describe your task 
+            and let AI handle the details!
+        </p>
         
-        <div class="input-area">
-            <textarea id="userInput" placeholder="Enter your task here..."></textarea>
-            <button id="submitBtn">Submit</button>
+        <div class="input-section">
+            <textarea id="activityInput" placeholder="Describe your activity here..."></textarea>
+            <button id="submitBtn">Plan Activity</button>
         </div>
 
-        <div id="loading">Processing...</div>
-
-        <div class="task-area" id="taskArea">
-            <button class="task-button" id="taskButton"></button>
-            <div class="result-box" id="resultBox"></div>
+        <div id="responseSection" class="response-section hidden">
+            <h2>Activity Plan</h2>
+            <div id="responseContainer"></div>
+            <button id="executeBtn" class="hidden">Execute Plan</button>
         </div>
     </div>
-    <script src="pyodide_worker.js"></script>
     <script src="popup.js"></script>
 </body>
 </html>
